EGS update sheet

--- a/index.css
+++ b/index.css
@@ -23,10 +23,10 @@ h1{
     color: rgb(95, 4, 134);
 }
 button{
-    border: 2px solid; 
+   border: 2px solid; 
     outline: none;
     height: 40px;
-    background:  transparent;
+    background:  linear-gradient(120deg, #FF0000 20%, rgb(179, 55, 232));
     color: #141414;
     font-size: 17px;
     font-weight: bold;
@@ -37,9 +37,9 @@ button{
 button:hover
 {
     cursor: pointer;
-    border: 4px solid rgb(223, 26, 26);
-    background-size: cover;
     background-position: center;
+    background: linear-gradient(120deg, #FF0000 20%, rgb(232, 55, 179));
+    transition: all ease 0.5s;
 }
 .main{
 width: 75%;
@@ -85,7 +85,7 @@ ul {
     display: block;
     color: rgba(253, 225, 228, 0.933);
     text-align: center;
-    padding: 14px 60px;
+    padding: 14px 45px;
     text-decoration: none;
     letter-spacing: 0.8px;
   }
@@ -560,4 +560,17 @@ footer h2{
     .copyright{
         text-align: left;
     }
+}
+@media only screen and (max-width: 600px) {
+  /* styles for small screens */
+  .container {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 601px) {
+  /* styles for large screens */
+  .container {
+    width: 80%;
+  }
 }
